fix: alter styling to fix the house banner display on smaller devices

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,11 @@
-
-
-
-
 * {
     box-sizing: border-box;
     font-family: "Old Standard TT", serif;
     font-weight: 500;
     font-style: normal;
     color: #333;
-    
-} 
+
+}
 
 .container {
     width: 100vw;
@@ -18,7 +14,7 @@
     align-items: center;
     max-width: 80rem;
     margin: 0 auto;
-  }
+}
 
 
 /* Main page title */
@@ -45,18 +41,19 @@
     padding: 10px;
     background-color: rgba(128, 0, 128, 0.7);
     border-radius: 25px;
+    font-size: 3.5vh;
 }
 
 .welcome-message-2 {
     color: #fafafa;
-    font-size: 22px;
+    font-size: 3vh;
     font-family: "Old Standard TT", serif;
     padding: 10px;
 }
 
 .choose-house-text {
     color: #fafafa;
-    font-size: 22px;
+    font-size: 3vh;
     font-family: "Old Standard TT", serif;
     padding: 10px;
 }
@@ -66,16 +63,29 @@
     padding: 20px;
     margin-top: 100px;
 }
+
 @media only screen and (max-width: 995px) {
-    #house-banner{
+    #house-banner {
         margin: auto;
-        width: 80%;
+        width: 100%;
         height: 100%;
     }
-  }
+
+    .welcome-message-2 {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    #house-banner div {
+        max-height: 15%;
+        margin: 0px;
+        padding: 0px;
+    }
+}
 
 #house-banner button {
-    margin:  20px auto 20px;
+    margin: 20px auto 20px;
 }
 
 
@@ -99,7 +109,7 @@
     #select-level-text {
         margin: 50px auto 10px;
     }
-  }
+}
 
 .level-option-buttons {
     padding: 20px;
@@ -132,7 +142,7 @@
     padding: 40px;
     height: 90%;
     border-radius: 25px;
-  }
+}
 
 #level-title {
     color: white;
@@ -142,14 +152,14 @@
     padding: 20px;
 }
 
-#question-text{
+#question-text {
     padding: 20px;
     color: yellow;
 }
 
 .answer-container {
     padding: 20px;
-    
+
 }
 
 .button-container {
@@ -161,26 +171,29 @@
 
 .answer-container button {
     padding: 20px;
-    margin: auto; 
+    margin: auto;
     width: 80%;
 }
 
 @media only screen and (max-width: 995px) {
-   .answer-container .button1:hover {
+    .answer-container .button1:hover {
         background-color: unset;
         color: #0d6efd;
     }
+
     .answer-container .button2:hover {
         background-color: unset;
-        color:#198754;
+        color: #198754;
     }
+
     .answer-container .button3:hover {
         background-color: unset;
-        color:#dc3545;
+        color: #dc3545;
     }
+
     .answer-container .button4:hover {
         background-color: unset;
-        color:#ffc107;
+        color: #ffc107;
     }
 }
 
@@ -205,7 +218,7 @@
 }
 
 #hogwarts-crest {
-    height:140px;
+    height: 140px;
 }
 
 #total-score {
@@ -225,4 +238,3 @@
     background-color: purple;
     color: #fafafa;
 }
-
